kode-kloud-practices/config-data.yml
apiVersion: v1
kind: Pod
metadata:
  name: time-check
  namespace: datacenter
spec:
  containers:
  - name: time-check
    image: busybox:latest
    command:
    - "/bin/sh"
    - "-c"
    - "while true; do date; sleep $TIME_FREQ; done >> /opt/security/time/time-check.log"
    volumeMounts:
    - name: log-volume
      mountPath: /opt/security/time
  volumes:
  - name: log-volume
    emptyDir: {}
