kode-kloud-practices/printenv.yml
# Create a pod named print-envars-greeting.

# Configure spec as, the container name should be print-env-container and use bash image.

# Create three environment variables:

# a. GREETING and its value should be Welcome to

# b. COMPANY and its value should be Stratos

# c. GROUP and its value should be Industries

# Use command ["/bin/sh", "-c", 'echo "$(GREETING) $(COMPANY) $(GROUP)"'] 
# (please use this exact command), also set its restartPolicy policy to Never to avoid crash loop back.

# You can check the output using kubectl logs -f print-envars-greeting command.

---
apiVersion: v1
kind: Pod
metadata:
  name: print-envars-greeting
spec:
  containers:
  - name: print-env-container
    image: bash
    resources:
      limits: 
        memory: "100Mi"
        cpu: "200m"
    command: ["/bin/sh", "-c", 'echo "$(GREETING) $(COMPANY) $(GROUP)"']
  restartPolicy: Never
