kode-kloud-practices/ingress-nginx-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: my-ingress
spec:
  rules:
  - host: nginx-loadbalancers-817926053.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
